--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Valentine's day Alex!</title>
+  <title>Bonne Saint Valentin Steph!</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -15,42 +15,42 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Mazarine</span>
+        <span data-node-name="greeting"></span>
+        <span data-node-name="name"></span>
       </h1>
-      <p class="two" data-node-name="greetingText">I really like your name by the way 🙃</p>
+      <p class="two" data-node-name="greetingText"></p>
     </div>
     <div class="three">
-      <p data-node-name="text1">It's Valentine's Day!!! ✌🏽</p>
+      <p data-node-name="text1"></p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">How to give up on your dream woman... 🥺</p>
-        <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox"></p>
+        <p class="fake-btn" data-node-name="sendButtonLabel"></p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1" data-node-name="text2">That's what I was going to do...</p>
-      <p class="idea-2" data-node-name="text3">But then I stopped.</p>
+      <p class="idea-1" data-node-name="text2"></p>
+      <p class="idea-2" data-node-name="text3"></p>
       <p class="idea-3">
-        <span data-node-name="text4"> I realised that...</span>
-        <strong data-node-name="text4Adjective">I just can't</strong>.</p>
-      <p class="idea-4" data-node-name="text5Entry">Because,</p>
+        <span data-node-name="text4"></span>
+        <strong data-node-name="text4Adjective"></strong></p>
+      <p class="idea-4" data-node-name="text5Entry"></p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You're too amazing to let go 🙈</span>
+        <span data-node-name="text5Content"></span>
         <span class="smiley" data-node-name="smiley">:)</span>
       </p>
       <p class="idea-6">
-        <span data-node-name="bigTextPart1">S</span>
-        <span data-node-name="bigTextPart2">O</span>
+        <span data-node-name="bigTextPart1"></span>
+        <span data-node-name="bigTextPart2"></span>
       </p>
     </div>
     <div class="six">
       <img src="img/mazarine.jpeg" alt="" class="lydia-dp" data-node-name="imagePath">
       <img src="img/heart.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd" data-node-name="wishHeading">Happy Valentine, Gorgeous!</h3>
-        <h5 data-node-name="wishText">I love you with all my heart ❤️</h5>
+        <h3 class="wish-hbd" data-node-name="wishHeading"></h3>
+        <h5 data-node-name="wishText">Beaucoup de love ❤️</h5>
       </div>
     </div>
     <div class="seven">
@@ -120,8 +120,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Would you... like to be my Valentine? 🐣</p>
-      <p id="replay" data-node-name="replayText">Oh and you can click here to see again</p>
+      <p data-node-name="outroText"></p>
+      <p id="replay" data-node-name="replayText"></p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
